feat: implement grid system (resolves #76) (#77)

--- a/src/_includes/layouts/ideas.njk
+++ b/src/_includes/layouts/ideas.njk
@@ -7,14 +7,14 @@
 {% set pageType = 'page--ideas' %}
 
 {% block content %}
-    <article class="container">
+    <article>
         {% include 'partials/components/page-header.njk' %}
         <div class="content">
-            <div class="inner">
+            <div class="wrapper">
             {% if pagination.pageNumber == 0 %}
                 {% if collections.featured.length %}
                 <h2 class="h4">Featured</h2>
-                <div class="grid grid--featured">
+                <div class="entries entries--featured">
                 {% for post in collections.featured | limit(2) %}
                     {% include 'partials/components/idea-grid-item.njk' %}
                 {% endfor %}
@@ -23,7 +23,7 @@
             {% endif %}
             <h2 class="h4">Latest</h2>
             {% if posts.length %}
-                <div class="grid">
+                <div class="entries">
                 {% for post in posts %}
                 {% include 'partials/components/idea-grid-item.njk' %}
                 {% endfor %}
@@ -32,20 +32,7 @@
             </div>
         </div>
         {% if pagination.pages.length > 1 %}
-        <nav class="pagination" aria-labelledby="pagination">
-            <h2 id="pagination" class="sr-only">news page navigation</h2>
-            <ul class="container">
-            {%- if pagination.href.previous %}
-                <li><a href="{{ pagination.href.previous }}">{% include 'svg/previous.svg' %}<span class="sr-only">previous</span></a></li>
-            {%- endif %}
-            {%- for pageEntry in pagination.pages %}
-                <li><a href="{{ pagination.hrefs[ loop.index0 ] }}"{% if page.url == pagination.hrefs[ loop.index0 ] %} aria-current="page"{% endif %}>{{ loop.index }}</a></li>
-            {%- endfor %}
-            {%- if pagination.href.next %}
-                <li><a href="{{ pagination.href.next }}"><span class="sr-only">next</span>{% include 'svg/next.svg' %}</a></li>
-            {%- endif %}
-            </ul>
-        </nav>
+        {% include 'partials/components/pagination.njk' %}
         {% endif %}
     </article>
 {% endblock %}
