--- a/src/_includes/layouts/single.njk
+++ b/src/_includes/layouts/single.njk
@@ -5,10 +5,10 @@
 {% endif %}
 
 {% block content %}
-    <article class="container">
+    <article>
         {% include 'partials/components/single-header.njk' %}
         <div class="content">
-            <div class="inner">
+            <div class="wrapper">
             {{ content | safe }}
             </div>
         </div>
