--- a/src/_includes/layouts/page--team.njk
+++ b/src/_includes/layouts/page--team.njk
@@ -7,11 +7,11 @@
 {% set pageType = 'page--team' %}
 
 {% block content %}
-    <article class="container">
+    <article>
         {% include 'partials/components/page-header.njk' %}
         <div class="content">
-            <div class="inner">
-                <div class="grid grid--people">
+            <div class="wrapper">
+                <div class="people">
                 {% for person in collections.people %}
                 {% include 'partials/components/person-excerpt.njk' %}
                 {% endfor %}
