--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -38,6 +38,14 @@ $colors: (
   'yellow-500': $yellow-500
 );
 
+$breakpoints: (
+  xs: 0,
+  sm: 600,
+  md: 1024,
+  lg: 1440,
+  xl: 1920
+);
+
 :root {
   @each $name, $color in $colors {
     --#{$name}: #{$color};
@@ -59,11 +67,20 @@ $colors: (
   --step--1: calc(14 / 16 * 1rem);
   --step-0: 1rem;
   --step-1: calc(18 / 16 * 1rem);
-  --step-2: calc(22 / 16 * 1rem);
-  --step-3: calc(24 / 16 * 1rem);
-  --step-4: calc(28 / 16 * 1rem);
-  --step-5: calc(32 / 16 * 1rem);
-  --step-6: calc(42 / 16 * 1rem);
-  --step-7: calc(44 / 16 * 1rem);
-  --step-8: calc(62 / 16 * 1rem);
+  --step-2: calc(24 / 16 * 1rem);
+  --step-3: calc(32 / 16 * 1rem);
+  --step-4: calc(42 / 16 * 1rem);
+
+  // Grid System
+  --gutter: calc(30 / 16 * 1rem);
+  --max-width: calc((1200 / 16 * 1rem) - var(--gutter));
+}
+
+@media screen and (min-width: 1024px) {
+  :root {
+    --step-1: calc(22 / 16 * 1rem);
+    --step-2: calc(28 / 16 * 1rem);
+    --step-3: calc(44 / 16 * 1rem);
+    --step-4: calc(62 / 16 * 1rem);
+  }
 }
