--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -5,7 +5,7 @@
 h1,
 .h1 {
   font-family: var(--ff-serif);
-  font-size: var(--step-6);
+  font-size: var(--step-4);
   font-weight: var(--fw-black);
   line-height: 1.3;
 }
@@ -13,7 +13,7 @@ h1,
 h2,
 .h2 {
   font-family: var(--ff-serif);
-  font-size: var(--step-5);
+  font-size: var(--step-3);
   font-weight: var(--fw-black);
   line-height: 1.3;
 }
@@ -21,7 +21,7 @@ h2,
 h3,
 .h3 {
   font-family: var(--ff-display);
-  font-size: var(--step-3);
+  font-size: var(--step-2);
   font-weight: var(--fw-semibold);
   line-height: 1.3;
 }
@@ -35,31 +35,31 @@ h4,
 }
 
 p + * {
-  margin-top: 1.5rem;
+  margin-top: rem(24);
 }
 
 ul + *,
 ol + * {
-  margin-top: 1.5rem;
+  margin-top: rem(24);
 }
 
 h2 + *,
 .h2 + * {
-  margin-top: 1.5rem;
+  margin-top: rem(24);
 }
 
 p + h2,
 p + .h2 {
-  margin-top: 4rem;
+  margin-top: rem(64);
 }
 
 h3 + p {
-  margin-top: 1rem;
+  margin-top: rem(16);
 }
 
 * + ul,
 * + ol {
-  margin-top: 1.5rem;
+  margin-top: rem(24);
 }
 
 h4 + p,
@@ -68,31 +68,18 @@ h4 + ol,
 .h4 + p,
 .h4 + ul,
 .h4 + ol {
-  margin-top: 0.75rem;
+  margin-top: rem(12);
 }
 
 .h3 + p {
-  margin-top: 0.25rem;
+  margin-top: rem(4);
 }
 
-@media (min-width: 1024px) {
-  h1,
-  .h1 {
-    font-size: var(--step-8);
-  }
-
-  h2,
-  .h2 {
-    font-size: var(--step-7);
-  }
-
-  h3,
-  .h3 {
-    font-size: var(--step-4);
-  }
-
-  h4,
-  .h4 {
-    font-size: var(--step-2);
+@include breakpoint-up(md) {
+  :root {
+    --step-1: calc(22 / 16 * 1rem);
+    --step-2: calc(28 / 16 * 1rem);
+    --step-3: calc(44 / 16 * 1rem);
+    --step-4: calc(62 / 16 * 1rem);
   }
 }
