--- a/src/scss/components/_brand.scss
+++ b/src/scss/components/_brand.scss
@@ -1,9 +1,9 @@
 .brand {
   color: inherit;
-  height: 5rem;
-  margin-left: -1.125rem;
-  padding-top: 0.75rem;
-  width: 4.5rem;
+  height: rem(80);
+  margin-left: rem(-3);
+  padding-top: rem(12);
+  width: rem(72);
   z-index: 20;
 
   &:hover,
@@ -17,40 +17,26 @@
   }
 }
 
-@media (min-width: 768px) {
-  .brand {
-    width: 14.5rem;
-  }
-}
-
 .brand svg {
   fill: currentColor;
-  margin-left: 1.125rem;
-  width: 2.5rem;
+  margin-left: rem(18);
+  width: rem(40);
 }
 
 .brand .brand__logo svg {
   display: inline;
-  width: 2.5rem;
-
-  @media (min-width: 768px) {
-    display: none;
-  }
+  width: rem(40);
 }
 
 .brand .brand__logotype svg {
   display: none;
-  width: 12.45689655rem;
-
-  @media (min-width: 768px) {
-    display: inline;
-  }
+  width: rem(200);
 }
 
 .page--home {
   .brand {
     color: var(--blue-500);
-    width: 4.5rem;
+    width: rem(72);
 
     &:hover,
     &:focus {
@@ -87,5 +73,19 @@
       background: var(--indigo-900);
       color: var(--white);
     }
+  }
+}
+
+@include breakpoint-up(sm) {
+  .brand {
+    width: rem(232);
+  }
+
+  .brand .brand__logo svg {
+    display: none;
+  }
+
+  .brand .brand__logotype svg {
+    display: inline;
   }
 }
