--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,16 +1,17 @@
 .nav {
-  height: 38px;
+  height: rem(38);
   margin-left: auto;
   margin-top: 0;
 }
 
 .nav .menu-toggle {
   background: var(--header-bg, transparent);
-  border-radius: 3px;
+  border-radius: rem(3);
   color: var(--blue-900);
-  height: 34px;
+  height: 3rem(4);
   line-height: 0.7;
-  padding: 6px 12px;
+  margin-right: rem(2);
+  padding: rem(6) rem(12);
   position: relative;
   z-index: 20;
 
@@ -20,7 +21,7 @@
 
   &:focus {
     background: var(--header-bg, transparent);
-    box-shadow: 0 0 0 2px var(--parent-bg), 0 0 0 4px var(--blue-900), 0 0 0 2px var(--blue-900) inset;
+    box-shadow: 0 0 0 rem(2) var(--parent-bg), 0 0 0 rem(4) var(--blue-900), 0 0 0 rem(2) var(--blue-900) inset;
   }
 
   &:active {
@@ -37,7 +38,7 @@
     }
 
     &:focus {
-      box-shadow: 0 0 0 2px var(--parent-bg), 0 0 0 4px var(--header-fg), 0 0 0 2px var(--header-fg) inset;
+      box-shadow: 0 0 0 rem(2) var(--parent-bg), 0 0 0 rem(4) var(--header-fg), 0 0 0 rem(2) var(--header-fg) inset;
       color: var(--white);
     }
 
@@ -49,17 +50,17 @@
 
   svg {
     display: inline-block;
-    margin-right: 0.25rem;
+    margin-right: rem(4);
   }
 }
 
 .nav .menu {
   background: var(--indigo-800);
-  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  box-shadow: 0 rem(20) rem(25) rem(-5) rgba(0, 0, 0, 0.1), 0 rem(10) rem(10) rem(-5) rgba(0, 0, 0, 0.04);
   color: var(--white);
   display: none;
-  left: 0;
-  padding: 5.5rem 0 2.5rem;
+  left: calc(-1 / 2 * var(--gutter));
+  padding: rem(88) 0 rem(40);
   position: absolute;
   width: 100vw;
   z-index: 10;
@@ -70,7 +71,7 @@
 }
 
 .menu .menu-label {
-  padding: 0 1.5rem;
+  padding: 0 var(--gutter);
 }
 
 .menu ul {
@@ -84,7 +85,7 @@
   padding: 0;
 
   &.submenu-parent--submenu-visible {
-    border-bottom: 1px solid black;
+    border-bottom: rem(1) solid black;
 
     button[data-parent="true"] {
       text-decoration: none;
@@ -104,8 +105,8 @@
   display: flex;
   font-family: var(--ff-display);
   font-weight: var(--fw-semibold);
-  height: 3.125rem;
-  padding: 0 1.5rem;
+  height: rem(50);
+  padding: 0 var(--gutter);
   text-align: left;
   text-decoration: none;
   width: 100%;
@@ -126,7 +127,7 @@
 .menu [data-parent="true"] {
   text-decoration: underline;
   text-decoration-color: var(--yellow-200);
-  text-decoration-thickness: 2px;
+  text-decoration-thickness: rem(2);
 
   &:hover,
   &:focus {
@@ -136,7 +137,7 @@
 
 .menu button svg {
   display: inline-block;
-  margin-left: 0.5rem;
+  margin-left: rem(8);
 }
 
 .menu li ul a {
@@ -169,7 +170,7 @@
     }
 
     &:focus {
-      box-shadow: 0 0 0 2px var(--parent-bg), 0 0 0 4px var(--header-fg), 0 0 0 2px var(--header-fg) inset;
+      box-shadow: 0 0 0 rem(2) var(--parent-bg), 0 0 0 rem(4) var(--header-fg), 0 0 0 rem(2) var(--header-fg) inset;
       color: var(--white);
     }
 
@@ -217,15 +218,15 @@
     box-shadow: none;
     color: var(--header-fg);
     display: block;
-    margin-left: -1.5rem;
-    margin-right: -1.5rem;
-    padding-top: 2rem;
+    margin-left: rem(-24);
+    margin-right: rem(-24);
+    padding-top: rem(32);
     position: relative;
-    width: calc(3rem + 100%);
+    width: calc(#{rem(48)} + 100%);
   }
 
   .nav .menu-label {
-    @include sr-only();
+    @include visually-hidden();
   }
 
   .nav li ul {
@@ -280,7 +281,7 @@
   .menu li ul [data-parent="true"] {
     text-decoration: underline;
     text-decoration-color: var(--indigo-500);
-    text-decoration-thickness: 0.125rem;
+    text-decoration-thickness: rem(2);
 
     &:hover,
     &:focus {
@@ -346,87 +347,10 @@
   }
 }
 
-.nav--secondary {
-  background: var(--indigo-200);
-  padding: 2.5rem 1.5rem;
-}
-
-.menu--secondary a {
-  align-items: center;
-  border-bottom: 0.0625rem solid var(--black);
-  display: block;
-  display: flex;
-  flex-direction: row;
-  height: 3.125rem;
-  justify-content: space-between;
-  text-decoration: none;
-
-  &:hover,
-  &:focus {
-    background: var(--indigo-800);
-    border-bottom-color: transparent;
-    box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-800), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-800);
-    color: var(--white);
-  }
-
-  &:active {
-    background: var(--indigo-500);
-    box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-500), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-500);
-  }
-
-  &::after {
-    background: currentColor;
-    content: "";
-    display: inline-block;
-    height: 1.5em;
-    margin-left: 0.125em;
-    mask-position: center;
-    mask-repeat: no-repeat;
-    mask-size: 1.5em;
-  }
-
-  &:not([rel="external"])::after {
-    margin-bottom: 0;
-    mask-image: url('../images/internal.svg');
-    width: 1em;
-  }
-
-  &[rel~="external"]::after,
-  &[href^="mailto:"]::after {
-    margin-bottom: 0.125em;
-    mask-image: url('../images/external.svg');
-    width: 1.5em;
-  }
-
-  &[aria-current="page"],
-  &[data-parent="true"] {
-    border-bottom-color: var(--indigo-500);
-    box-shadow: inset 0 -0.0625rem 0 0 var(--indigo-500);
-    font-weight: var(--fw-bold);
-
-    &:hover,
-    &:focus {
-      border-bottom-color: transparent;
-      box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-800), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-800);
-    }
-
-    &:active {
-      border-bottom-color: transparent;
-      box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-500), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-500);
-    }
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .nav--secondary {
-    box-shadow: 0.5625rem 0.5625rem 0 0 var(--indigo-500);
-    margin: 3rem 0 6rem;
-  }
-}
-
-@media screen and (min-width: 1024px) {
+@include breakpoint-up(md) {
   .nav {
-    height: 5rem;
+    height: rem(80);
+    margin-right: rem(-20);
   }
 
   .nav .menu-toggle {
@@ -437,7 +361,7 @@
     background: transparent;
     box-shadow: none;
     display: block;
-    height: 5rem;
+    height: rem(80);
     margin-top: 0;
     padding-bottom: 0;
     padding-top: 0;
@@ -447,7 +371,7 @@
   }
 
   .menu .menu-label {
-    @include sr-only();
+    @include visually-hidden();
   }
 
   .menu ul {
@@ -464,11 +388,11 @@
 
   .menu li ul {
     background: var(--white);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 rem(10) rgba(0, 0, 0, 0.25);
     left: 0;
     margin-top: 0;
     position: absolute;
-    width: 16rem;
+    width: rem(256);
     z-index: 20;
   }
 
@@ -478,8 +402,8 @@
     color: var(--blue-900);
     display: flex;
     font-weight: var(--fw-medium);
-    height: 5rem;
-    padding: 0 1.25rem;
+    height: rem(80);
+    padding: 0 rem(20);
 
     &:hover,
     &:focus {
@@ -502,8 +426,8 @@
   .menu [data-parent="true"] {
     text-decoration: underline;
     text-decoration-color: var(--black);
-    text-decoration-thickness: 2px;
-    text-underline-offset: 0.3125rem;
+    text-decoration-thickness: rem(2);
+    text-underline-offset: rem(5);
 
     &:hover,
     &:focus {
@@ -516,8 +440,8 @@
     color: var(--black);
     font-weight: var(--fw-normal);
     height: unset;
-    min-height: 3.125rem;
-    padding: 0 1.25rem;
+    min-height: rem(50);
+    padding: 0 rem(20);
 
     &:hover,
     &:focus {
@@ -603,25 +527,25 @@
 
   .no-js {
     .nav {
-      height: 12rem;
-      margin-top: 1.625rem;
+      height: rem(192);
+      margin-top: rem(26);
       width: 100%;
     }
 
     .nav .menu {
-      height: 12rem;
+      height: rem(192);
       margin-left: 0;
     }
 
     .menu ul {
       columns: 4;
       display: block;
-      height: 10rem;
+      height: rem(160);
       width: auto;
     }
 
     .menu li {
-      padding-top: 0.75rem;
+      padding-top: rem(12);
 
       &.submenu-parent {
         break-inside: avoid;
@@ -665,7 +589,7 @@
     .menu [aria-current="page"] {
       text-decoration: underline;
       text-decoration-color: var(--indigo-500);
-      text-decoration-thickness: 0.1875rem;
+      text-decoration-thickness: rem(3);
 
       &:hover,
       &:focus {
@@ -691,15 +615,15 @@
     }
 
     .menu a[href="#"] + ul li + li {
-      padding-top: 0.75rem;
+      padding-top: rem(12);
     }
 
     .menu a:not([href="#"]) + ul li {
-      margin-top: 0.5rem;
+      margin-top: rem(8);
     }
 
     .menu a:not([href="#"]) + ul li + li {
-      margin-top: 0.5rem;
+      margin-top: rem(8);
     }
 
     .page--home {
@@ -716,11 +640,6 @@
       }
     }
   }
-
-  .nav--secondary {
-    box-shadow: 0.5625rem 0.5625rem 0 0 var(--indigo-500);
-    float: left;
-    margin: 6rem 0 6rem 3rem;
-    width: calc(1 / 3 * (100% - 6rem));
-  }
 }
+
+@import 'nav--secondary';
