--- a/src/scss/idrc.scss
+++ b/src/scss/idrc.scss
@@ -4,7 +4,8 @@
 @import
   'abstracts/variables',
   'abstracts/functions',
-  'abstracts/mixins';
+  'abstracts/mixins',
+  'abstracts/grid';
 
 // 2. Vendors
 
@@ -32,7 +33,7 @@
   'components/image',
   'components/nav',
   'components/pagination',
-  'components/single-header';
+  'components/metadata';
 
 // 6. Page-specific styles
 @import
