--- a/src/scss/pages/_team.scss
+++ b/src/scss/pages/_team.scss
@@ -1,58 +1,57 @@
 
-article.person {
-  border-top: 0.25rem solid var(--indigo-500);
-  margin: 0;
-  padding-top: 1.5rem;
+.page--team {
+  .person {
+    border-top: rem(4) solid var(--indigo-500);
+    margin: 0;
+    padding-top: rem(24);
 
-  h2 + .metadata {
-    margin-top: 0.25rem;
+    h2 + .metadata {
+      margin-top: rem(4);
+    }
+
+    .metadata p + p {
+      margin-top: rem(4);
+    }
+
+    .metadata + p {
+      margin-top: rem(12);
+    }
+
+    .link--email {
+      align-items: center;
+      display: inline-flex;
+      flex-direction: row;
+      font-size: var(--step--1);
+      font-weight: var(--fw-semibold);
+      text-decoration: none;
+    }
+
+    .link--email svg {
+      display: inline-block;
+      margin-right: rem(4);
+    }
   }
 
-  .metadata p + p {
-    margin-top: 0.25rem;
-  }
-
-  .metadata + p {
-    margin-top: 0.75rem;
-  }
-}
-
-.person + .person {
-  margin-top: 3rem;
-}
-
-.link--email {
-  align-items: center;
-  display: inline-flex;
-  flex-direction: row;
-  font-size: 0.875rem;
-  font-weight: var(--fw-semibold);
-  text-decoration: none;
-}
-
-.link--email svg {
-  display: inline-block;
-  margin-right: 0.25rem;
-}
-
-.page--team article .content {
-  padding: 3rem 0;
-}
-
-@media screen and (min-width: 768px) {
   .person + .person {
-    margin-top: 0;
+    margin-top: rem(48);
   }
 }
 
-@media screen and (min-width: 1024px) {
-  .page--team article .content {
-    float: left;
-    padding: 6rem 0;
-    width: calc(2 / 3 * (100% - 6rem) + 3rem);
+@include breakpoint-up(sm) {
+  .page--team {
+    .person + .person {
+      margin-top: 0;
+    }
   }
+}
 
-  .grid.grid--people {
-    grid-template-columns: repeat(2, 1fr);
+@include breakpoint-up(md) {
+  .page--team {
+    .people {
+      column-gap: var(--gutter);
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      row-gap: rem(48);
+    }
   }
 }
