fix: add option to not split subheads

--- a/src/_includes/partials/components/section.njk
+++ b/src/_includes/partials/components/section.njk
@@ -1,6 +1,6 @@
 {% set sectionTitle = '' %}
 {% set sectionContent = '' %}
-{% set subsectionLevel = '3' %}
+{% set subsectionLevel = 0 %}
 {% set desktopWidth = 'section--full' %}
 {% set imageOrderDesktop = '' %}
 
