feat: add two-thirds width sections

--- a/src/_includes/partials/components/section.njk
+++ b/src/_includes/partials/components/section.njk
@@ -23,6 +23,7 @@
 {{ desktopWidth }}
 {{ 'section--image' if section.image }}
 {{ section.desktopAlignment if section.desktopAlignment }}
+{{ 'section--full-bleed' if section.fullBleed }}
 {{ 'section--bg-' + section.backgroundColor if section.backgroundColor }}
 {{ 'section--fg-' + section.textColor if section.textColor }}"
 data-subsection-level="{{ subsectionLevel }}">
