--- a/src/admin.njk
+++ b/src/admin.njk
@@ -13,6 +13,7 @@ permalink: '/admin/index.html'
   <!-- Include the script that builds the page and powers Netlify CMS -->
   <script src="https://unpkg.com/netlify-cms@2.10.35/dist/netlify-cms.js"></script>
   <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script src="/node_modules/nunjucks/browser/nunjucks-slim.js"></script>
   <script src="/admin/util.js"></script>
