--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -34,45 +34,49 @@ h4,
   line-height: 1.3;
 }
 
-p + * {
-  margin-top: rem(24);
+h1 + *,
+.h1 + * {
+  margin-top: rem(30);
 }
 
-ul + *,
-ol + * {
-  margin-top: rem(24);
+* + h1,
+* + .h1 {
+  margin-top: rem(30);
 }
 
 h2 + *,
 .h2 + * {
-  margin-top: rem(24);
+  margin-top: rem(50);
 }
 
-p + h2,
-p + .h2 {
-  margin-top: rem(64);
+* + h2,
+* + .h2 {
+  margin-top: rem(80);
 }
 
-h3 + p {
+.hr + h2,
+.hr + .h2 {
+  margin-top: rem(30);
+}
+
+h3 + *,
+.h3 + * {
+  margin-top: rem(20);
+}
+
+* + h3,
+* + .h3 {
+  margin-top: rem(40);
+}
+
+h4 + *,
+.h4 + * {
   margin-top: rem(16);
 }
 
-* + ul,
-* + ol {
-  margin-top: rem(24);
-}
-
-h4 + p,
-h4 + ul,
-h4 + ol,
-.h4 + p,
-.h4 + ul,
-.h4 + ol {
-  margin-top: rem(12);
-}
-
-.h3 + p {
-  margin-top: rem(4);
+* + h4,
+* + .h4 {
+  margin-top: rem(30);
 }
 
 @include breakpoint-up(md) {
@@ -81,5 +85,25 @@ h4 + ol,
     --step-2: calc(28 / 16 * 1rem);
     --step-3: calc(44 / 16 * 1rem);
     --step-4: calc(62 / 16 * 1rem);
+  }
+
+  h2 + *,
+  .h2 + * {
+    margin-top: rem(40);
+  }
+
+  * + h2,
+  * + .h2 {
+    margin-top: rem(100);
+  }
+
+  .hr + h2,
+  .hr + .h2 {
+    margin-top: rem(40);
+  }
+
+  * + h3,
+  * + .h3 {
+    margin-top: rem(50);
   }
 }
