--- a/src/scss/pages/_generic.scss
+++ b/src/scss/pages/_generic.scss
@@ -82,7 +82,6 @@ main > article {
 .hr {
   border-bottom: rem(2) solid;
   display: block;
-  margin-bottom: rem(40);
   width: rem(80);
 }
 
@@ -95,22 +94,45 @@ main > article {
 .section {
   background: var(--indigo-100);
   color: var(--blue-900);
-  padding-bottom: rem(80);
-  padding-top: rem(80);
+  padding-bottom: rem(100);
+  padding-top: rem(100);
+}
+
+.section:not([class*="section--bg"]) {
+  padding-top: rem(100);
+}
+
+.section + .section:not([class*="section--bg"]) {
+  padding-bottom: rem(100);
+  padding-top: 0;
+}
+
+.section--image:not([class*="section--bg"]) {
+  padding-bottom: rem(124);
+}
+
+.section[class*="section--bg"] + .section:not([class*="section--bg"]) {
+  padding-top: rem(50);
 }
 
 .section--full,
 .section--half,
-.section--third {
+.section--third,
+.section--two-thirds {
   flex: 0 0 100%;
 }
 
-.section--full .subsection + .subsection {
-  margin-top: rem(24);
+.section--full[data-subsection-level="3"] .subsection + .subsection,
+.section--two-thirds[data-subsection-level="3"] .subsection + .subsection {
+  margin-top: rem(50);
+}
+
+.section--full[data-subsection-level="4"] .subsection + .subsection,
+.section--two-thirds[data-subsection-level="4"] .subsection + .subsection {
+  margin-top: rem(20);
 }
 
 .section--full-bleed {
-  flex: 0 0 100%;
   position: relative;
 
   &::after {
@@ -133,7 +155,7 @@ main > article {
 
 .section--image figure {
   box-shadow: rem(24) rem(24) var(--indigo-500);
-  margin-bottom: rem(80);
+  margin-bottom: rem(100);
 }
 
 .section--image figure.shadow-indigo-500 {
@@ -167,29 +189,20 @@ main > article {
     margin-right: auto;
   }
 
+  .section[class*="section--bg"] + .section:not([class*="section--bg"]) {
+    padding-top: rem(100);
+  }
+
   .section--half {
     flex: 0 0 50%;
   }
 
-  .section--full .subsection {
-    float: left;
-    width: 50%;
-  }
-
-  .section--full .subsection:nth-child(odd) {
-    margin-left: rem(-24);
-    margin-right: rem(24);
-    padding-left: rem(24);
-  }
-
-  .section--full .subsection:nth-child(even) {
-    margin-left: rem(24);
-    margin-right: rem(-24);
-    padding-right: rem(24);
-  }
-
   .section--third {
     flex: 0 0 calc(100% / 3);
+  }
+
+  .section--two-thirds {
+    flex: 0 0 calc(100% * 2 / 3);
   }
 
   .section--image .wrapper {
@@ -207,6 +220,7 @@ main > article {
   }
 
   .section--image figure {
+    margin-bottom: rem(24);
     margin-left: rem(-24);
     order: 0;
   }
@@ -216,8 +230,19 @@ main > article {
   }
 
   .section__content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     order: 1;
     width: 100%;
+  }
+
+  .section__content > *:not(.hr) {
+    flex: 0 0 100%;
+  }
+
+  .section__content > .subsection {
+    flex: 0 0 calc(50% - (var(--gutter) / 2));
   }
 
   .section--image .section__content {
@@ -241,6 +266,11 @@ main > article {
   .section--image .section__content + figure.swap {
     margin-top: 0;
     order: 2;
+  }
+
+  .section--full[data-subsection-level="3"] .subsection + .subsection,
+  .section--two-thirds[data-subsection-level="3"] .subsection + .subsection {
+    margin-top: rem(40);
   }
 }
 
